# puda

./: .dockerignore  .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  README.md  STRUCTURE.md  compose.yml  langgraph.json  mcp.json  pyproject.toml
apps/backend/app/: dependencies.py  main.py
apps/backend/app/agents/: README.md
apps/backend/app/agents/executor/: agent.py  nodes.py  state.py  tools.py
apps/backend/app/agents/general/: router.py  state.py  workflow.py
apps/backend/app/agents/knowledge/: README.md  agent.py  nodes.py  router.py  state.py  tools.py
apps/backend/app/agents/planner/: agent.py  nodes.py  state.py
apps/backend/app/agents/researcher/: agent.py  agent2.py  nodes.py  router.py  state.py  tools.py
apps/backend/app/agents/supervisor/: README.md  agent.py  nodes.py  router.py  state.py  tools.py
apps/backend/app/models/: __init__.py  agent.py  chat.py
apps/backend/app/routers/: agents.py
apps/backend/app/services/openrouter/: __init__.py
apps/backend/tests/: researcher.py
apps/cli/: .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  go.mod  go.sum
apps/cli/tests/: biologic.json  combined.json  commands.json  first.json
bears-skills/: README.md
bears-skills/bears-machines/: SKILL.md
bears-skills/bears-machines/references/: balance-machine.md  labware.md
bears-skills/bears-workflows/: SKILL.md
bears-skills/bears-workflows/references/: colour-mixing-opt.md  image-processing.md  optimization.md  viscosity-optimization.md
bears-skills/bears-workflows/scripts/: balance_data_process.py  image_processing.py  metric.py  optimizers.py  thread.py
docs/: architecture_diagram.md  batch_commands_guide.md  improvement_ideas.md  nats_architecture.html  nats_architecture_diagram.md  nx.md  run_state_management_plan.md  sila_vs_nats_comparison.md  simulation_implementation.md  temp.md  uv.md
infra/nats/: .env  .env.example  README.md  compose.yml  nats.conf  setup_streams.sh
infra/nats/k8s/: nats-ha.yaml
infra/postgres/: README.md  compose.yml  init.sql
libs/comms/: README.md  machine_client_diagram.md  pyproject.toml
libs/comms/docs/: command_service_diagram.md  machine_client_diagram.md
libs/comms/src/puda_comms/: __init__.py  command_service.py  edge_nats_client.py  edge_runner.py  edge_updater.py  execution_state.py  machine_client.py  models.py  run_manager.py  stream_subscriber.py  types.py
libs/comms/tests/: LAB_README.md  batch_commands.py  command_service.py  command_service_batch.py  commands.json  commands.py  electrode_only.json  first.py  get_position.py  sample_routine.py  send_cancel.py  send_pause.py  send_resume.py  send_update.py  shared_response_handler.py  state.py  status.py
libs/db/: README.md  pyproject.toml
libs/db/src/puda_db/: __init__.py  client.py
libs/drivers/: .gitignore  README.md  pyproject.toml
libs/drivers/balance_driver/: README.md  __init__.py  cli.py
libs/drivers/balance_driver/controllers/: 100g load cell calibration.csv  __init__.py  calibration.py  reading.py
libs/drivers/balance_driver/core/: __init__.py  http_client.py  logging.py
libs/drivers/balance_driver/edge/: .env.example  Dockerfile  compose.yml  main.py  pyproject.toml
libs/drivers/balance_driver/machines/: __init__.py  balance.py
libs/drivers/opentrons_driver/: README.md  __init__.py
libs/drivers/opentrons_driver/controllers/: __init__.py  protocol.py  resources.py  run.py
libs/drivers/opentrons_driver/core/: __init__.py  http_client.py  logging.py
libs/drivers/opentrons_driver/edge/: .env.example  Dockerfile  compose.yml  main.py  pyproject.toml
libs/drivers/opentrons_driver/labware/: mass_balance_vial_30000.json  mass_balance_vial_50000.json
libs/drivers/opentrons_driver/machines/: __init__.py  ot2.py
libs/drivers/src/puda_drivers/labware/: labware.py
libs/drivers/src/puda_drivers/machines/: __init__.py  biologic.py  first.py  pipqubotv3.py
libs/drivers/src/puda_drivers/move/: deck.py  gcode.py  grblHAL.py  reprap.py
libs/drivers/src/puda_drivers/sim/machines/: first
libs/drivers/src/puda_drivers/sim/move/: gcode
libs/drivers/src/puda_drivers/sim/transfer/liquid/: sartorius
libs/drivers/src/puda_drivers/transfer/liquid/sartorius/: rLine.py
libs/drivers/tests/: conftest.py  first.py  pipette.py  qubot.py  test_balance_calibration.py  test_balance_cli.py  test_balance_reading.py  test_deck  test_labware.py  test_protocol.py  test_run.py
libs/edge-device/: __init__.py  edge_device.py  requirements.txt
libs/puda-python/: README.md  pyproject.toml
libs/puda-python/docs/: machine_client_diagram.md
libs/puda-python/src/puda/: edge_nats_client.py
libs/puda-python/tests/: batch_commands.py  commands.json  commands.py  send_update.py
libs/python-sdk/: pyproject.toml
libs/python-sdk/docs/: command_service_diagram.md
libs/python-sdk/tests/: electrode_only.json  send_update.py
machines/biologic/edge/: .env.example  Dockerfile  README.md  biologic_machine.py  compose.yml  main.py  pyproject.toml  start_biologic_edge.bat
machines/biologic/edge/tests/: biologic.py  biologic_commands.json  test.json  test_nats.py
machines/first/edge/: .env.example  Dockerfile  README.md  compose.yml  first.py  main.py  pyproject.toml
machines/first/mcp/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml  server.py
services/first/: pyproject.toml
services/first/edge/: Dockerfile  README.md  compose.yml  pyproject.toml
services/first/mcp/: Dockerfile  README.md  compose.yml  pyproject.toml  server.py
services/logger/: .env.example  Dockerfile  README.md  compose.yml  logger.py  main.py  pyproject.toml
services/nats/: README.md  compose.yml  nats.config
services/opentron/: main.py  opentrons_device.py  requirements.txt
services/opentron/edge/: base_robot.py  example_robot.py  main.py  mqtt_test.py  nats_client.py  opentrons_robot.py  pyproject.toml
services/test/: main.py  nats_client.py  pyproject.toml
(+95 files in other folders)
