[project]
name = "puda-root"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Your root dependencies here
]

# Add this section
[tool.uv.workspace]
members = [
    "libs/*",
    "libs/drivers/opentrons_driver/edge",
    "libs/drivers/balance_driver/edge",
    "services/*",
    "machines/*/*",
    "apps/backend",
]

