[project]
name = "backend"
version = "0.1.0"
description = "A LangGraph based backend to orchestrate distributed MCP servers for lab machines"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openrouter==0.1.1",
    "python-dotenv==1.2.1",
]
