[project]
name = "logger"
version = "0.1.0"
description = "Logger service that listens to NATS command/response streams and logs to PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "puda-db",
    "puda-comms",
]

[tool.uv.sources]
puda-db = {workspace=true}
puda-comms = {workspace=true}

