[project]
name = "first-edge"
version = "0.1.0"
description = "Edge service for the 'first' machine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "puda-drivers",
    "puda-comms",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
puda-drivers = {workspace=true}
puda-comms = {workspace=true}
